--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,6 @@ spring:
       on-profile: dev
 
   datasource:
-    # 로컬에서 .env(.env.dev)에 아래 3개를 정의하거나, 여기서 기본값을 줄 수도 있습니다.
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/oneclass}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:postgres}
@@ -14,10 +13,11 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: false
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
+        use_sql_comments: false
 
   mail:
     host: smtp.gmail.com
@@ -31,9 +31,12 @@ spring:
           starttls.enable: true
           ssl.trust: smtp.gmail.com
 
+# dev에서도 민감정보 노출 방지를 위해 SQL/바인딩 로그 끔
 logging:
   level:
-    org.hibernate.SQL: DEBUG
-    org.hibernate.orm.jdbc.bind: TRACE
+    root: INFO
+    org.springframework: INFO
+    org.hibernate.SQL: OFF
+    org.hibernate.orm.jdbc.bind: OFF
     org.hibernate.type.descriptor.sql.BasicBinder: OFF
-    org.springframework.security.config.annotation.authentication.configuration.UserDetailsServiceAutoConfiguration: ERROR
+    org.springframework.security: WARN
