--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,6 @@ spring:
       on-profile: prod
 
   datasource:
-    # 운영 변수명도 dev와 동일 키로 맞추는 것을 권장합니다.
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
@@ -18,6 +17,7 @@ spring:
     properties:
       hibernate:
         format_sql: false
+        use_sql_comments: false
 
   mail:
     host: smtp.gmail.com
@@ -33,9 +33,13 @@ spring:
 
 logging:
   level:
-    org.hibernate.SQL: WARN
+    root: INFO
+    org.springframework: INFO
+    org.hibernate.SQL: OFF
+    org.hibernate.orm.jdbc.bind: OFF
+    org.hibernate.type.descriptor.sql.BasicBinder: OFF
     org.springframework.security: WARN
 
 jwt:
-  # 운영에서는 반드시 환경변수 제공(미제공 시 실패하도록 fallback 제거)
+  # 운영에서는 반드시 환경변수 제공(미제공 시 실패)
   secret: ${JWT_SECRET}
